bad/for_class_over_class_side.example_compiler_output
ERROR
[1mbad/for_class_over_class_side.lat:6:13: [1;31merror: [0;1mfor cannot iterate over value of non-array type `Z`[m
	for (Y x : new Z) {}
	           [1;32m^[m
